<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GameFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/game_title"-->
<!--            android:textStyle="normal"-->
<!--            android:textSize="24sp"-->
<!--            android:layout_gravity="center"-->
<!--            android:textColor="@color/blue"-->
<!--            android:padding="5dp"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_header"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:layout_marginBottom="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/rv_vehicle_bg">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                />

        </LinearLayout>



        <TextView
            android:id="@+id/tvSelect4Planets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_4_planets"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tvTimeTaken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_taken"
            android:textStyle="normal"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="5dp"/>

        <Button
            android:id="@+id/btnResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_falcone_btn"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            />

    </LinearLayout>

</FrameLayout>